crates/myso-upgrade-compatibility-transactional-tests/tests/snapshots/tests__large_package_equality_check_alpha_rename.snap
---
source: crates/myso-upgrade-compatibility-transactional-tests/tests/tests.rs
assertion_line: 119
expression: results
---
====
Compatibility { check_datatype_layout: true, check_private_entry_linking: false, disallowed_new_abilities: [Copy, Drop, Store, Key, ] }
0000000000000000000000000000000000000000000000000000000000000000::ascii:
	base->upgrade: true
	upgrade->base: true
====
====
Compatibility { check_datatype_layout: true, check_private_entry_linking: true, disallowed_new_abilities: [] }
0000000000000000000000000000000000000000000000000000000000000000::ascii:
	base->upgrade: true
	upgrade->base: true
====
====
Compatibility { check_datatype_layout: true, check_private_entry_linking: true, disallowed_new_abilities: [Key, ] }
0000000000000000000000000000000000000000000000000000000000000000::ascii:
	base->upgrade: true
	upgrade->base: true
====
====
Compatibility { check_datatype_layout: false, check_private_entry_linking: false, disallowed_new_abilities: [] }
0000000000000000000000000000000000000000000000000000000000000000::ascii:
	base->upgrade: true
	upgrade->base: true
========
Equal
0000000000000000000000000000000000000000000000000000000000000000::ascii:
	base->upgrade: true
	upgrade->base: true
====
====
Subset
0000000000000000000000000000000000000000000000000000000000000000::ascii:
	base->upgrade: true
	upgrade->base: true
====
